--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Daniela Guardia</title>
 </head>
 
 <body>
+  <nav class="bg-dark navbar navbar-expand-md" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">HOME</a>
 
-  <nav>
-    <a href="#">HOME</a>
-    <a href="#cv">CV</a>
-    <a href="#portafolio">PORTAFOLIO</a>
-    <a href="#contacto">CONTACTO</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbar">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" href="#cv">ACERCA DE MÍ</a>
+          <a class="nav-link" href="#portafolio">PORTAFOLIO</a>
+          <a class="nav-link" href="#contacto">CONTACTO</a>
+    
+        </div>      
+      </div>
+
+    </div>
   </nav>
 
   <header>
@@ -48,7 +62,9 @@
   <footer>
     &copy; 2024
   </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
