Fill header and cv sections, add styles and bg image

--- a/index.html
+++ b/index.html
@@ -24,23 +24,62 @@
           <a class="nav-link" href="#cv">ACERCA DE MÍ</a>
           <a class="nav-link" href="#portafolio">PORTAFOLIO</a>
           <a class="nav-link" href="#contacto">CONTACTO</a>
-    
         </div>      
       </div>
 
     </div>
   </nav>
 
-  <header>
-    <h1>Desarrolladora web</h1>
-    <p>En formación</p>
+  <header id="header" class="container-fluid py-5 vh-100">
+    <div class="d-flex">
+      <div>
+        <p id="minombre" class="display-1">DANIELA GUARDIA</p>
+        <h1 class="text-start">Desarrolladora Full-stack</h1>
+      </div>
+      <div>
+        
+      </div>
+    </div>
   </header>
 
-  <section id="cv">
-    <h2>CV</h2>
-    <h3>Tecnologías</h3>
-    <h3>Habilidades</h3>
-    <h3>Educación</h3>
+  <section id="cv" class="container-md py-4 bg-tertiary">
+
+    <h2>Acerca de mí</h2>
+
+    <div class="row">
+      <div class="col-12 col-md-4">
+        <h3>Lenguajes</h3>
+        <ul>
+          <li class="fs-5">HTML/CSS</li>
+          <li class="fs-5">Javascript</li>
+          <li class="fs-5">Python</li>
+          <li class="fs-5">C</li>
+          <li class="fs-5">SQL</li>
+        </ul>       
+      </div>
+
+      <div class="col-12 col-md-4">
+        <h3>Frameworks</h3>
+        <li class="fs-5">Bootstrap</li>
+        <li class="fs-5">Flask</li>
+      </div>
+
+      <div class="col-12 col-md-4">
+        <h3>Herramientas</h3>
+        <li class="fs-5">Git</li>
+        <li class="fs-5">Github</li>
+        <li class="fs-5">Linux</li>
+      </div>
+
+      <div class="col-12 col-md-12 col-xl-4">
+        <h3>Educación</h3>
+        <ul class="text-start">
+          <li><span class="text-accent">(En progreso)</span> Bootcamp Desarrollo Full Stack Javascript - Academia Desafío Latam</li>
+          <li>(2024) CS50: Introduction to Computer Science - Harvard University </li>
+          <li>(2018) Bachiller en Lengua Inglesa - Pontificia Universidad Católica de Valparaíso</li>
+        </ul>
+      </div>
+    </div>
   </section>
 
   <section id="portafolio">
@@ -59,7 +98,7 @@
     </form>
   </section>
 
-  <footer>
+  <footer class="container-fluid bg-dark py-4">
     &copy; 2024
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
