--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav class="bg-dark navbar navbar-expand-sm" data-bs-theme="dark">
+  <nav class="bg-theme2 navbar navbar-expand-sm" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">HOME</a>
 
@@ -44,7 +44,7 @@
 
   </header>
 
-  <section id="cv" class="container-md py-4 bg-tertiary">
+  <section id="cv" class="container-md py-4">
 
     <h2 class="mb-3">Acerca de mí</h2>
 
@@ -52,7 +52,7 @@
 
       <div class="col-12 col-md-4">
         <h3 class="mb-3">Lenguajes</h3>
-        <ul>
+        <ul class="fs-5">
           <li >HTML/CSS</li>
           <li >Javascript</li>
           <li >Python</li>
@@ -63,7 +63,7 @@
 
       <div class="col-12 col-md-4">
         <h3 class="mb-3">Frameworks</h3>
-        <ul>
+        <ul class="fs-5">
           <li >Bootstrap</li>
           <li >Flask</li>
         </ul>
@@ -71,7 +71,7 @@
 
       <div class="col-12 col-md-4">
         <h3 class="mb-3">Herramientas</h3>
-        <ul>
+        <ul class="fs-5">
           <li >Git</li>
           <li >Github</li>
           <li >Linux</li>
@@ -91,24 +91,56 @@
 
   <section id="portafolio" class="container-fluid py-4 bg-theme2">
     <h2 class="mb-3">Portafolio</h2>
-    <div class="row">
-      <h3>Cuppon</h3>
-      <h3>Arriendo</h3>
-      <h3>Iguana</h3>
+    <div class="row justify-content-center">
+
+      <div class="col-12 col-md-6 col-xl-4 mb-3">
+        <div class="card">
+          <img src="assets/img/iguana-desktop.jpg" class="card-img-top" alt="Iguana">
+          <div class="card-body">
+            <h3 class="card-title">Iguana</h3>
+            <p class="card-text">Landing page estilizada utilizando CSS la propiedad flexbox para alinear el contenido de manera responsiva. También se emplean íconos de FontAwesome.</p>
+            <a class="btn btn-dark" href="https://danijgp.github.io/adl-iguana/">Ver</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-xl-4 mb-3">
+        <div class="card">
+          <img src="assets/img/arriendo-tablet.jpg" class="card-img-top" alt="Arriendo">
+          <div class="card-body">
+            <h3 class="card-title">Arriendo</h3>
+            <p class="card-text">Página de arriendo de propiedades que utiliza la barra de navegación, el sistema de filas y columnas, y los temas de color por defecto del framework Bootstrap.</p>
+            <a class="btn btn-dark" href="https://danijgp.github.io/arriendo/">Ver</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-xl-4 mb-3">
+        <div class="card">
+          <img src="assets/img/cuppon-desktop.jpg" class="card-img-top" alt="Cuppon">
+          <div class="card-body">
+            <h3 class="card-title">Cuppon</h3>
+            <p class="card-text">Sitio de descuentos que, adicionalmente, implementa modificaciones a las clases CSS de Bootstrap para utilizar un tema de colores personalizado</p>
+            <a class="btn btn-dark" href="https://danijgp.github.io/adl-cuppon/">Ver</a>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
-  <section id="contacto">
+  <section id="contacto" class="container text-center py-4">
     <h2 class="mb-3">Contáctame</h2>
-    <form action="">
+    <form action="" class="d-flex flex-column">
       <input type="text" name="nombre" id="nombre">
       <input type="email" name="email" id="email">
       <input type="text" name="mensaje" id="mensaje">
+      <button class="btn btn-secondary">Enviar</button>
     </form>
   </section>
 
-  <footer class="container-fluid bg-dark py-4">
-    &copy; 2024
+  <footer class="container-fluid bg-theme2 py-4">
+    <p class="text-center">&copy; 2024</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
