--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Daniela Guardia</title>
 </head>
@@ -32,8 +38,8 @@
 
   <header id="header" class="d-flex flex-column justify-content-between container-fluid">
     
-    <div class="m-4 m-md-5 ">
-      <p id="minombre" class="display-1">DANIELA GUARDIA</p>
+    <div class="m-4 m-md-5">
+      <p id="minombre" class="display-1 fw-medium">DANIELA GUARDIA</p>
       <h1 class="text-start">Desarrolladora Full Stack</h1>
     </div>
       
@@ -46,7 +52,7 @@
 
   <section id="cv" class="container-md py-4">
 
-    <h2 class="mb-3">Acerca de mí</h2>
+    <h2 class="mb-4 display-3 fw-medium">Acerca de mí</h2>
 
     <div class="row justify-content-center">
 
@@ -83,14 +89,14 @@
         <ul class="bg-theme text-start">
           <li><span class="text-accent">(En progreso)</span> Bootcamp Desarrollo Full Stack Javascript - Academia Desafío Latam</li>
           <li>(2024) CS50: Introduction to Computer Science - Harvard University </li>
-          <li>(2018) Bachiller en Lengua Inglesa - Pontificia Universidad Católica de Valparaíso</li>
+          <li>(2015-2018) Bachiller en Lengua Inglesa - Pontificia Universidad Católica de Valparaíso</li>
         </ul>
       </div>
     </div>
   </section>
 
   <section id="portafolio" class="container-fluid py-4 bg-theme2">
-    <h2 class="mb-3">Portafolio</h2>
+    <h2 class="mb-4 display-3 fw-medium">Portafolio</h2>
     <div class="row justify-content-center">
 
       <div class="col-12 col-md-6 col-xl-4 mb-3">
