--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -26,26 +27,23 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav ms-auto">
+        <div class="navbar-nav me-auto">
           <a class="nav-link" href="#cv">ACERCA DE MÍ</a>
           <a class="nav-link" href="#portafolio">PORTAFOLIO</a>
-          <a class="nav-link" href="#contacto">CONTACTO</a>
-        </div>      
+        </div>
       </div>
 
     </div>
   </nav>
 
   <header id="header" class="d-flex flex-column justify-content-between container-fluid">
-    
+
     <div class="m-4 m-md-5">
       <p id="minombre" class="display-1 fw-medium">DANIELA GUARDIA</p>
       <h1 class="text-start">Desarrolladora Full Stack</h1>
     </div>
-      
+
     <div class="align-self-end fs-3 m-4 m-md-5">
-      <a href="#">Github</a>
-      <a href="#">Twitter</a>
     </div>
 
   </header>
@@ -54,44 +52,81 @@
 
     <h2 class="mb-4 display-3 fw-medium">Acerca de mí</h2>
 
+    <div class="container mb-5">
+      <h3 class="mb-3 fs-1">Educación</h3>
+      <ul class="text-start fs-5">
+        <div>
+          <li class="mb-3">
+            <div>
+              <span class="text-accent">(En progreso)</span> <span class="text-contrast">Bootcamp Desarrollo Full Stack
+                Javascript</span>
+            </div>
+            <div>Academia Desafío Latam</div>
+          </li>
+        </div>
+        <li class="mb-3">
+          <div>
+            <span class="text-accent">(2024)</span> <span class="text-contrast">CS50: Introduction to Computer
+              Science</span>
+          </div>
+          <div>Harvard University</div>
+        </li>
+        <li class="mb-3">
+          <div><span class="text-accent">(2015-2018)</span> <span class="text-contrast">Bachiller en Lengua
+              Inglesa</span></div>
+          <div>Pontificia Universidad Católica de Valparaíso</div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="container mb-5">
+      <h3 class="mb-3 fs-1">Experiencia</h3>
+      <ul class="fs-5">
+        <li class="mb-3"><span class="text-accent">(2018-)</span> <span class="text-contrast">Traductora inglés-español freelance</span></li>
+        <li class="mb-3"><div><span class="text-accent">(2017-2019)</span> <span class="text-contrast">Traductora voluntaria</span></div><div>Global Voices ES</div></li>
+      </ul>
+    </div>
+
     <div class="row justify-content-center">
 
-      <div class="col-12 col-md-4">
+      <div class="col-6 col-md-4">
         <h3 class="mb-3">Lenguajes</h3>
         <ul class="fs-5">
-          <li >HTML/CSS</li>
-          <li >Javascript</li>
-          <li >Python</li>
-          <li >C</li>
-          <li >SQL</li>
-        </ul>       
+          <li>HTML/CSS</li>
+          <li>Javascript</li>
+          <li>Python</li>
+          <li>C</li>
+          <li>SQL</li>
+        </ul>
       </div>
 
-      <div class="col-12 col-md-4">
+      <div class="col-6 col-md-4">
         <h3 class="mb-3">Frameworks</h3>
         <ul class="fs-5">
-          <li >Bootstrap</li>
-          <li >Flask</li>
+          <li>Bootstrap</li>
+          <li>Flask</li>
         </ul>
       </div>
 
-      <div class="col-12 col-md-4">
+      <div class="col-6 col-md-4">
         <h3 class="mb-3">Herramientas</h3>
         <ul class="fs-5">
-          <li >Git</li>
-          <li >Github</li>
-          <li >Linux</li>
+          <li>Git</li>
+          <li>Github</li>
+          <li>Linux</li>
         </ul>
       </div>
 
-      <div>
-        <h3 class="mb-3">Educación</h3>
-        <ul class="bg-theme text-start">
-          <li><span class="text-accent">(En progreso)</span> Bootcamp Desarrollo Full Stack Javascript - Academia Desafío Latam</li>
-          <li>(2024) CS50: Introduction to Computer Science - Harvard University </li>
-          <li>(2015-2018) Bachiller en Lengua Inglesa - Pontificia Universidad Católica de Valparaíso</li>
+      <div class="col-6 col-md-4">
+        <h3 class="mb-3">Idiomas</h3>
+        <ul class="fs-5">
+          <li>Español nativo</li>
+          <li>Inglés avanzado (C1)</li>
+          <li>Japonés básico (A2)</li>
         </ul>
       </div>
+
+
     </div>
   </section>
 
@@ -104,7 +139,8 @@
           <img src="assets/img/iguana-desktop.jpg" class="card-img-top" alt="Iguana">
           <div class="card-body">
             <h3 class="card-title">Iguana</h3>
-            <p class="card-text">Landing page estilizada utilizando CSS la propiedad flexbox para alinear el contenido de manera responsiva. También se emplean íconos de FontAwesome.</p>
+            <p class="card-text">Landing page estilizada utilizando CSS la propiedad flexbox para alinear el contenido
+              de manera responsiva. También se emplean íconos de FontAwesome.</p>
             <a class="btn btn-dark" href="https://danijgp.github.io/adl-iguana/">Ver</a>
           </div>
         </div>
@@ -115,7 +151,8 @@
           <img src="assets/img/arriendo-tablet.jpg" class="card-img-top" alt="Arriendo">
           <div class="card-body">
             <h3 class="card-title">Arriendo</h3>
-            <p class="card-text">Página de arriendo de propiedades que utiliza la barra de navegación, el sistema de filas y columnas, y los temas de color por defecto del framework Bootstrap.</p>
+            <p class="card-text">Página de arriendo de propiedades que utiliza la barra de navegación, el sistema de
+              filas y columnas, y los temas de color por defecto del framework Bootstrap.</p>
             <a class="btn btn-dark" href="https://danijgp.github.io/arriendo/">Ver</a>
           </div>
         </div>
@@ -126,7 +163,8 @@
           <img src="assets/img/cuppon-desktop.jpg" class="card-img-top" alt="Cuppon">
           <div class="card-body">
             <h3 class="card-title">Cuppon</h3>
-            <p class="card-text">Sitio de descuentos que, adicionalmente, implementa modificaciones a las clases CSS de Bootstrap para utilizar un tema de colores personalizado</p>
+            <p class="card-text">Sitio de descuentos que, adicionalmente, implementa modificaciones a las clases CSS de
+              Bootstrap para utilizar un tema de colores personalizado</p>
             <a class="btn btn-dark" href="https://danijgp.github.io/adl-cuppon/">Ver</a>
           </div>
         </div>
@@ -135,18 +173,8 @@
     </div>
   </section>
 
-  <section id="contacto" class="container text-center py-4">
-    <h2 class="mb-3">Contáctame</h2>
-    <form action="" class="d-flex flex-column">
-      <input type="text" name="nombre" id="nombre">
-      <input type="email" name="email" id="email">
-      <input type="text" name="mensaje" id="mensaje">
-      <button class="btn btn-secondary">Enviar</button>
-    </form>
-  </section>
-
   <footer class="container-fluid bg-theme2 py-4">
-    <p class="text-center">&copy; 2024</p>
+    <p class="text-center">&copy; 2024 Daniela Guardia</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
