Minor style changes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <div class="row justify-content-center">
 
-      <div class="col-6 col-md-4">
+      <div class="col-12 col-sm-6">
         <h3 class="mb-3">Lenguajes</h3>
         <ul class="fs-5">
           <li>HTML/CSS</li>
@@ -100,7 +100,7 @@
         </ul>
       </div>
 
-      <div class="col-6 col-md-4">
+      <div class="col-12 col-sm-6">
         <h3 class="mb-3">Frameworks</h3>
         <ul class="fs-5">
           <li>Bootstrap</li>
@@ -108,7 +108,7 @@
         </ul>
       </div>
 
-      <div class="col-6 col-md-4">
+      <div class="col-12 col-sm-6">
         <h3 class="mb-3">Herramientas</h3>
         <ul class="fs-5">
           <li>Git</li>
@@ -117,7 +117,7 @@
         </ul>
       </div>
 
-      <div class="col-6 col-md-4">
+      <div class="col-12 col-sm-6">
         <h3 class="mb-3">Idiomas</h3>
         <ul class="fs-5">
           <li>Español nativo</li>
@@ -134,7 +134,7 @@
     <h2 class="mb-4 display-3 fw-medium">Portafolio</h2>
     <div class="row justify-content-center">
 
-      <div class="col-12 col-md-6 col-xl-4 mb-3">
+      <div class="col-12 col-md-6 col-lg-4 mb-3">
         <div class="card">
           <img src="assets/img/iguana-desktop.jpg" class="card-img-top" alt="Iguana">
           <div class="card-body">
@@ -146,7 +146,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-xl-4 mb-3">
+      <div class="col-12 col-md-6 col-lg-4 mb-3">
         <div class="card">
           <img src="assets/img/arriendo-tablet.jpg" class="card-img-top" alt="Arriendo">
           <div class="card-body">
@@ -158,7 +158,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-xl-4 mb-3">
+      <div class="col-12 col-md-6 col-lg-4 mb-3">
         <div class="card">
           <img src="assets/img/cuppon-desktop.jpg" class="card-img-top" alt="Cuppon">
           <div class="card-body">
