Change target of portfolio links

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <h3 class="card-title">Iguana</h3>
             <p class="card-text">Landing page estilizada utilizando CSS la propiedad flexbox para alinear el contenido
               de manera responsiva. También se emplean íconos de FontAwesome.</p>
-            <a class="btn btn-dark" href="https://danijgp.github.io/adl-iguana/">Ver</a>
+            <a class="btn btn-dark" href="https://danijgp.github.io/adl-iguana/" target="_blank">Ver</a>
           </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
             <h3 class="card-title">Arriendo</h3>
             <p class="card-text">Página de arriendo de propiedades que utiliza la barra de navegación, el sistema de
               filas y columnas, y los temas de color por defecto del framework Bootstrap.</p>
-            <a class="btn btn-dark" href="https://danijgp.github.io/arriendo/">Ver</a>
+            <a class="btn btn-dark" href="https://danijgp.github.io/arriendo/" target="_blank">Ver</a>
           </div>
         </div>
       </div>
@@ -165,7 +165,7 @@
             <h3 class="card-title">Cuppon</h3>
             <p class="card-text">Sitio de descuentos que, adicionalmente, implementa modificaciones a las clases CSS de
               Bootstrap para utilizar un tema de colores personalizado</p>
-            <a class="btn btn-dark" href="https://danijgp.github.io/adl-cuppon/">Ver</a>
+            <a class="btn btn-dark" href="https://danijgp.github.io/adl-cuppon/" target="_blank">Ver</a>
           </div>
         </div>
       </div>
