--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Daniela Guardia</title>
@@ -31,8 +30,9 @@
   <header id="header">
 
     <div class="header-content">
-      <p id="minombre">DANIELA GUARDIA</p>
+      <p id="minombre">Daniela Guardia</p>
       <h1>Full Stack Developer</h1>
+      <p id="homeAbout">I build modern web applications with a focus in accessibility, responsivity and efficiency.</p>
 
     </div>
 
