fix: minor style, grammar issues

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <header id="header">
 
     <div class="header-content">
-      <p id="minombre">Daniela Guardia</p>
+      <p id="header-nombre">Daniela Guardia</p>
       <h1>Full Stack Developer</h1>
-      <p id="homeAbout">I build modern web applications with a focus in accessibility, responsivity and efficiency.</p>
+      <p id="header-body">I build modern web applications with a focus in accessibility, responsivity and efficiency.</p>
 
     </div>
 
