fix: actually add changes from previous commit

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="header-content">
       <p id="header-nombre">Daniela Guardia</p>
       <h1>Full Stack Developer</h1>
-      <p id="header-body">I build modern web applications with a focus in accessibility, responsivity and efficiency.</p>
+      <p id="header-body">I build modern web applications with a focus on accessibility, responsivity and efficiency.</p>
 
     </div>
 
