feat: add crude grid layout to portfolio section

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
   <main>
     <section id="portfolio">
-      <div class="column-container">
-        <h2>Portafolio</h2>
-        <div class="project-container">
+      <div class="portfolio-container">
+        <h2>My projects</h2>
+        <div class="project-grid">
           <div class="project-card">
             <img src="assets/img/iguana-desktop.jpg" alt="Iguana">
             <div>
