--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Daniela Guardia</title>
@@ -16,7 +18,7 @@
 <body>
   <nav id="navbar" data-bs-theme="dark">
     <div class="nav-navigation">
-      <a href="#" class="navbar-item">HOME</a>
+      <a href="#hero" class="navbar-item">HOME</a>
       <a href="#portfolio" class="navbar-item">PORTFOLIO</a>
       <a href="#skills" class="navbar-item">SKILLS</a>
       <a href="#cv" class="navbar-item">CV</a>
@@ -27,19 +29,20 @@
     </div>
   </nav>
 
-  <header id="header">
+  <header id="hero" class="section">
 
     <div class="header-content">
       <p id="header-nombre">Daniela Guardia</p>
       <h1>Full Stack Developer</h1>
-      <p id="header-body">I build modern web applications with a focus on accessibility, responsivity and efficiency.</p>
+      <p id="header-body">I build modern web applications with a focus on accessibility, responsivity and efficiency.
+      </p>
 
     </div>
 
   </header>
 
   <main>
-    <section id="portfolio">
+    <section id="portfolio" class="section">
       <div class="portfolio-container">
         <h2>My projects</h2>
         <div class="project-grid">
@@ -82,13 +85,13 @@
         </div>
       </div>
     </section>
-    <section id="skills">
+    <section id="skills" class="section">
       <h2>Skills</h2>
       <div>
         <p>Zero</p>
       </div>
     </section>
-    <section id="cv" class="vh-100">
+    <section id="cv" class="section">
       <h2>CV</h2>
       <div>
         <h3>Educación</h3>
@@ -137,7 +140,7 @@
         </div>
       </div>
     </section>
-    <section id="about">
+    <section id="about" class="section">
       <h2>About</h2>
       <div>
         <p>Me</p>
@@ -148,6 +151,9 @@
   <footer>
     <p>&copy; 2025, Daniela Guardia</p>
   </footer>
+
+  <script src="/assets/js/main.js" type="module"></script>
 </body>
+
 
 </html>
