--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       <a href="#skills" class="navbar-item">SKILLS</a>
       <a href="#cv" class="navbar-item">CV</a>
       <a href="#about" class="navbar-item">ABOUT</a>
-      <a href="#links" class="navbar-item">CONTACT ME</a>
     </div>
     <div class="nav-right">
     </div>
@@ -43,7 +42,6 @@
 
   <main>
     <section id="portfolio" class="section">
-      <div class="portfolio-container">
         <h2>My projects</h2>
         <div class="project-grid">
           <div class="project-card">
@@ -83,12 +81,11 @@
             </div>
           </div>
         </div>
-      </div>
     </section>
     <section id="skills" class="section">
       <h2>Skills</h2>
       <div>
-        <p>Zero</p>
+        <p>All of them</p>
       </div>
     </section>
     <section id="cv" class="section">
