feat: add grid layout and text to skills section

--- a/index.html
+++ b/index.html
@@ -42,50 +42,86 @@
 
   <main>
     <section id="portfolio" class="section">
-        <h2>My projects</h2>
-        <div class="project-grid">
-          <div class="project-card">
-            <img src="assets/img/iguana-desktop.jpg" alt="Iguana">
-            <div>
-              <h3>Iguana</h3>
-              <p>Landing page estilizada utilizando CSS la propiedad flexbox para alinear el contenido
-                de manera responsiva. También se emplean íconos de FontAwesome.</p>
-              <a href="https://danijgp.github.io/adl-iguana/" target="_blank">Ver</a>
-            </div>
-          </div>
-          <div class="project-card">
-            <img src="assets/img/arriendo-tablet.jpg" alt="Arriendo" class="project-img">
-            <div>
-              <h3>Arriendo</h3>
-              <p>Página de arriendo de propiedades que utiliza la barra de navegación, el sistema de
-                filas y columnas, y los temas de color por defecto del framework Bootstrap.</p>
-              <a href="https://danijgp.github.io/arriendo/" target="_blank">Ver</a>
-            </div>
-          </div>
-          <div class="project-card">
-            <img src="assets/img/cuppon-desktop.jpg" alt="Cuppon">
-            <div>
-              <h3>Cuppon</h3>
-              <p>Sitio de descuentos que, adicionalmente, implementa modificaciones a las clases CSS de
-                Bootstrap para utilizar un tema de colores personalizado</p>
-              <a href="https://danijgp.github.io/adl-cuppon/" target="_blank">Ver</a>
-            </div>
-          </div>
-          <div class="project-card">
-            <img src="assets/img/cuppon-desktop.jpg" alt="Cuppon">
-            <div>
-              <h3>Cuppon</h3>
-              <p>Sitio de descuentos que, adicionalmente, implementa modificaciones a las clases CSS de
-                Bootstrap para utilizar un tema de colores personalizado</p>
-              <a href="https://danijgp.github.io/adl-cuppon/" target="_blank">Ver</a>
-            </div>
+      <h2>My projects</h2>
+      <div class="project-grid">
+        <div class="project-card">
+          <img src="assets/img/iguana-desktop.jpg" alt="Iguana">
+          <div>
+            <h3>Iguana</h3>
+            <p>Landing page estilizada utilizando CSS la propiedad flexbox para alinear el contenido
+              de manera responsiva. También se emplean íconos de FontAwesome.</p>
+            <a href="https://danijgp.github.io/adl-iguana/" target="_blank">Ver</a>
           </div>
         </div>
+        <div class="project-card">
+          <img src="assets/img/arriendo-tablet.jpg" alt="Arriendo" class="project-img">
+          <div>
+            <h3>Arriendo</h3>
+            <p>Página de arriendo de propiedades que utiliza la barra de navegación, el sistema de
+              filas y columnas, y los temas de color por defecto del framework Bootstrap.</p>
+            <a href="https://danijgp.github.io/arriendo/" target="_blank">Ver</a>
+          </div>
+        </div>
+        <div class="project-card">
+          <img src="assets/img/cuppon-desktop.jpg" alt="Cuppon">
+          <div>
+            <h3>Cuppon</h3>
+            <p>Sitio de descuentos que, adicionalmente, implementa modificaciones a las clases CSS de
+              Bootstrap para utilizar un tema de colores personalizado</p>
+            <a href="https://danijgp.github.io/adl-cuppon/" target="_blank">Ver</a>
+          </div>
+        </div>
+        <div class="project-card">
+          <img src="assets/img/cuppon-desktop.jpg" alt="Cuppon">
+          <div>
+            <h3>Cuppon</h3>
+            <p>Sitio de descuentos que, adicionalmente, implementa modificaciones a las clases CSS de
+              Bootstrap para utilizar un tema de colores personalizado</p>
+            <a href="https://danijgp.github.io/adl-cuppon/" target="_blank">Ver</a>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="skills" class="section">
-      <h2>Skills</h2>
-      <div>
-        <p>All of them</p>
+      <h2>My Skills</h2>
+      <div class="skill-list-container">
+        <div id="frontend-section">
+          <h3>Frontend</h3>
+          <ul id="frontend-list">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>React</li>
+            <li>Bootstrap</li>
+          </ul>
+        </div>
+        <div id="backend-section">
+          <h3>Backend</h3>
+          <ul id="backend-list">
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>Flask</li>
+            <li>PostgreSQL</li>
+            <li>SQLite</li>
+            <li></li>
+          </ul>
+        </div>
+        <div id="other-section">
+          <h3>Technologies</h3>
+          <ul id="tech-list">
+            <li>Git</li>
+            <li>Github</li>
+            <li>Linux</li>
+            <li>bash</li>
+          </ul>
+        </div>
+        <div id="languages-section">
+          <h3>Languages</h3>
+          <ul>
+            <li>Javascript</li>
+            <li>Typescript</li>
+            <li>Python</li>
+          </ul>
+        </div>
       </div>
     </section>
     <section id="cv" class="section">
