--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
     </section>
     <section id="skills" class="section">
       <h2>My Skills</h2>
-      <div class="skill-list-container">
+      <div class="skills-grid">
         <div id="frontend-section" class="skill-section">
           <h3>Frontend</h3>
-          <div class="skill-card-container">
+          <div class="skill-card-container vertical">
             <div class="skill-card">
               <svg>
                 <use href="assets/icons/icons.svg#icon-html"></use>
@@ -116,7 +116,7 @@
         </div>
         <div id="backend-section" class="skill-section">
           <h3>Backend</h3>
-          <div class="skill-card-container">
+          <div class="skill-card-container vertical">
             <div class="skill-card">
               <svg>
                 <use href="assets/icons/icons.svg#icon-nodejs"></use>
@@ -180,12 +180,6 @@
                 <use href="assets/icons/icons.svg#icon-git"></use>
               </svg>
               <p>Git</p>
-            </div>
-            <div class="skill-card">
-              <svg>
-                <use href="assets/icons/icons.svg#icon-github"></use>
-              </svg>
-              <p>Github</p>
             </div>
             <div class="skill-card">
               <svg>
