feat: add clamp() based layout to cv section, rework and add some color and sizing css variables

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         </div>
       </div>
     </section>
+
     <section id="skills" class="section">
       <h2>My Skills</h2>
       <div class="skills-grid">
@@ -197,55 +198,86 @@
         </div>
       </div>
     </section>
+
     <section id="cv" class="section">
-      <h2>CV</h2>
-      <div>
-        <h3>Educación</h3>
-        <ul>
-          <div>
-            <li>
-              <div>
-                <span>(En progreso)</span> <span>Bootcamp Desarrollo Full Stack
-                  Javascript</span>
-              </div>
-              <div>Academia Desafío Latam</div>
-            </li>
-          </div>
-          <li>
-            <div>
-              <span>(2024)</span> <span>CS50: Introduction to Computer
-                Science</span>
-            </div>
-            <div>Harvard University</div>
-          </li>
-          <li>
-            <div><span>(2015-2018)</span> <span>Bachiller en Lengua
-                Inglesa</span></div>
-            <div>Pontificia Universidad Católica de Valparaíso</div>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h3>Experiencia</h3>
-        <ul>
-          <li><span>(2018-)</span> <span>Traductora inglés-español freelance</span></li>
-          <li>
-            <div><span>(2017-2019)</span> <span>Traductora voluntaria</span></div>
-            <div>Global Voices ES</div>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <div>
-          <h3>Idiomas</h3>
+      <div class="cv-page">
+        <div class="cv-main-header">
+          <h2>Resume</h2>
+          <a href="path/to/your/cv.pdf" download="Daniela_Guardia_CV.pdf" class="cv-download-button">
+            <span>PDF</span>
+            <svg>
+              <use href="assets/icons/icons.svg#material-symbols--download"></use>
+            </svg>
+          </a>
+        </div>
+        <div class="cv-category">
+          <h3>Education</h3>
           <ul>
-            <li>Español nativo</li>
-            <li>Inglés avanzado (C1)</li>
-            <li>Japonés básico (A2)</li>
+            <li>
+              <div class="cv-item-header">
+                <span class="cv-title">Full Stack Javascript</span>
+                <span class="cv-date">(2024-2025)</span>
+              </div>
+              <div class="cv-institution">Academia Desafío Latam</div>
+              <div class="cv-description">
+                Graduated from intensive program focused on modern web application development, covering frontend technologies like
+                HTML,
+                CSS, JavaScript, React, and backend with Node.js, Express, and databases like PostgreSQL.
+              </div>
+            </li>
+            <li>
+              <div class="cv-item-header">
+                <span class="cv-title">CS50: Introduction to Computer Science</span>
+                <span class="cv-date">(2024)</span>
+              </div>
+              <div class="cv-institution">Harvard University (Online)</div>
+              <div class="cv-description">Learned the fundamentals of computer science, tackling algorithms, big O notation, lists, tries and hash tables through C, Python and basic HTML/CSS</div>
+            </li>
+            <li>
+              <div class="cv-item-header">
+                 <span class="cv-title">Bachelor's Degree in English Language</span>
+                <span class="cv-date">(2015-2018)</span>
+              </div>
+              <div class="cv-institution">Pontifical Catholic University of Valparaíso</div>
+              <div class="cv-description"></div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="cv-category">
+          <h3>Experience</h3>
+          <ul>
+            <li>
+              <div class="cv-item-header">
+                <span class="cv-title">Freelance English-Spanish Translator</span>
+                <span class="cv-date">(2018 - Present)</span>
+              </div>
+              <div class="cv-institution"></div>
+              <div class="cv-description"></div>
+            </li>
+            <li>
+              <div class="cv-item-header">
+                <span class="cv-title">Volunteer Translator</span>
+                <span class="cv-date">(2017-2019)</span>
+              </div>
+              <div class="cv-institution">Global Voices ES</div>
+              <div class="cv-description"></div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="cv-category">
+          <h3>Languages</h3>
+          <ul>
+            <li>Spanish: Native</li>
+            <li>English: Advanced (C1)</li>
+            <li>Japanese: Intermediate ()</li>
           </ul>
         </div>
       </div>
     </section>
+
+
     <section id="about" class="section">
       <h2>About</h2>
       <div>
